# pythalab-sharq-hjb-uav-command-supervision

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  NOTICE  README.md  REPRODUCIBILITY.md  index.html  package-lock.json  package.json  playwright.config.ts  requirements-figures.txt  vite.config.ts
backend/: README.md  pyproject.toml  pyrightconfig.json
backend/configs/aircraft/: generic_jet.yaml  small_mav.yaml
backend/src/uavsim/: __init__.py  actuators.py  aircraft_config.py  atmosphere.py  autopilot.py  commands.py  dynamics.py  experiment_runner.py  forces_moments.py  gain_schedule.py  gains.py  guidance.py  linearization.py  output.py  parameters.py  q_learning.py  rotations.py  server.py  sharq_hjb.py  simulation.py  tecs.py  telemetry.py  transfer_functions.py  trim.py  wind.py
backend/tests/: test_uavsim_core.py  test_uavsim_server.py
docs/: README.md  api-websocket.md  architecture.md  backend.md  development.md  frontend.md  high-speed-140.md  running.md  setup.md  testing.md
experiments/: README.md
experiments/claims/: README.md
experiments/results/: README.md
experiments/results/data/: aggregate_by_method.csv  coarse_20x50_aggregate_by_method.csv  coarse_20x50_all_episode_summary.csv  full_duration_all_episode_summary.csv  full_duration_scenario_catalog.json
reproducibility/: MANIFEST.sha256  VALIDATION_2026-05-19.md
scripts/: export_tables.py  sync_results.py  write_figures.py
src/: main.tsx
src/app/: App.tsx  AppShell.tsx
src/state/: simulationStore.ts
src/styles/: global.css
tests/: browser-smoke.spec.ts
(+35 files in other folders)
